"Choose by numbers" do not work with Enum-menus, but work with operators-menus #39060

Closed
opened 2014-03-09 00:20:02 +01:00 by Yaniv Gershoni · 8 comments

System Information
Windows 7 64bit, gtx680m

Blender Version
Broken: 36279af
Worked: ???

when trying to choose snap mode by number it's not worked on the Ctrl+Shift+Tab Shortcut.
On Ctrl+Tab it worked well so you can choose Face by Ctrl+Tab+3.

**System Information** Windows 7 64bit, gtx680m **Blender Version** Broken: 36279af Worked: ??? when trying to choose snap mode by number it's not worked on the Ctrl+Shift+Tab Shortcut. On Ctrl+Tab it worked well so you can choose Face by Ctrl+Tab+3.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YanivGershoni

Added subscriber: @YanivGershoni

Added subscriber: @mont29

Added subscriber: @mont29

Reason is that "ctrl-tab" fires an operator-based menu, while "shift-ctrl-tab" directly affects an Enum property…

But from user POV it’s rather odd, will try to have a look at it!

Reason is that "ctrl-tab" fires an operator-based menu, while "shift-ctrl-tab" directly affects an Enum property… But from user POV it’s rather odd, will try to have a look at it!
Bastien Montagne self-assigned this 2014-03-10 22:50:44 +01:00
Bastien Montagne changed title from Choose by numbers didn't work on snap shortcut. to "Choose by numbers" do not work with Enum-menus, but work with operators-menus 2014-03-10 23:00:26 +01:00

This issue was referenced by blender/blender-addons-contrib@330272be9a

This issue was referenced by blender/blender-addons-contrib@330272be9ad2959f3ba63f568538a94d5c487160

This issue was referenced by 330272be9a

This issue was referenced by 330272be9ad2959f3ba63f568538a94d5c487160

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 330272be9a.

Closed by commit 330272be9a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39060
No description provided.