Fix T39060: "Choose by numbers" do not work with Enum-menus, but work with operators-menus

The "layer" exception in handling numbers for menus was a bit too much greedy, eating numbers for all RNA props instead of just for layers ones...